--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,8 @@ name = "pypi"
 [packages]
 flask = "*"
 imagehash = "*"
-psycopg2 = "*"
-
-[dev-packages]
+#psycopg2 = "*"
+psycopg2-binary = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
